; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/net/extr_typhoon.c_typhoon_num_free_resp.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/net/extr_typhoon.c_typhoon_num_free_resp.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.typhoon = type { %struct.TYPE_2__* }
%struct.TYPE_2__ = type { i32, i32 }

@RESPONSE_ENTRIES = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.typhoon*)* @typhoon_num_free_resp to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @typhoon_num_free_resp(%struct.typhoon* %0) #0 {
  %2 = alloca %struct.typhoon*, align 8
  %3 = alloca i32, align 4
  %4 = alloca i32, align 4
  store %struct.typhoon* %0, %struct.typhoon** %2, align 8
  %5 = load %struct.typhoon*, %struct.typhoon** %2, align 8
  %6 = getelementptr inbounds %struct.typhoon, %struct.typhoon* %5, i32 0, i32 0
  %7 = load %struct.TYPE_2__*, %struct.TYPE_2__** %6, align 8
  %8 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %7, i32 0, i32 1
  %9 = load i32, i32* %8, align 4
  %10 = call i32 @le32_to_cpu(i32 %9)
  store i32 %10, i32* %3, align 4
  %11 = load %struct.typhoon*, %struct.typhoon** %2, align 8
  %12 = getelementptr inbounds %struct.typhoon, %struct.typhoon* %11, i32 0, i32 0
  %13 = load %struct.TYPE_2__*, %struct.TYPE_2__** %12, align 8
  %14 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %13, i32 0, i32 0
  %15 = load i32, i32* %14, align 4
  %16 = call i32 @le32_to_cpu(i32 %15)
  store i32 %16, i32* %4, align 4
  %17 = load i32, i32* %3, align 4
  %18 = load i32, i32* %4, align 4
  %19 = load i32, i32* @RESPONSE_ENTRIES, align 4
  %20 = call i32 @typhoon_num_free(i32 %17, i32 %18, i32 %19)
  ret i32 %20
}

declare dso_local i32 @le32_to_cpu(i32) #1

declare dso_local i32 @typhoon_num_free(i32, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
